# masterthesis

./: .gitignore  manual_extractor.py  manual_urls.txt  pdf_data.json  pyproject.toml
masterthesis_poetry_project/: pyproject.toml
